--- a/index.html
+++ b/index.html
@@ -1,172 +1,181 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bn" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Portfolio 2025</title>
+    <title>এলিট পোর্টফোলিও ২০২৫ | সিলিকন গ্লাস থিম</title>
+    
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;900&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles@3.0.3/tsparticles.bundle.min.js"></script>
+    
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        darkBg: '#020617',
+                        accentNeon: '#22D3EE',
+                        glassWhite: 'rgba(255, 255, 255, 0.03)'
+                    },
+                    fontFamily: { sans: ['Inter', 'sans-serif'] }
+                }
+            }
+        }
+    </script>
+
     <style>
-        /* CSS resets and variables */
-        :root {
-            --primary-bg: #ffffff;
-            --secondary-bg: #f8f9fa;
-            --text-color: #1a1a1a;
-            --accent-color: #2563eb;
-            --touch-target: 48px; /* Standard target size [2] */
+        /* নয়েজ ও লিকুইড এফেক্ট */
+       .noise::before {
+            content: ""; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: url('https://www.ui-layouts.com/noise.gif'); opacity: 0.03;
+            pointer-events: none; z-index: 99;
         }
-
-        /* Dark mode support [5, 6] */
-        @media (prefers-color-scheme: dark) {
-            :root {
-                --primary-bg: #0f172a;
-                --secondary-bg: #1e293b;
-                --text-color: #f8f9fa;
-                --accent-color: #38bdf8;
-            }
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            font-size: 16px; /* Minimum accessible size [2] */
-            line-height: 1.6;
-            margin: 0;
-            background-color: var(--primary-bg);
-            color: var(--text-color);
-            transition: background 0.3s ease;
-        }
-
-        /* Mobile-First Layout [1, 3] */
-       .container {
-            width: 90%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px 0;
-        }
-
-        header {
-            padding: 40px 0;
-            text-align: center;
-        }
-
-        h1 { font-size: 2.5rem; margin-bottom: 0.5rem; }
-        p.subtitle { font-size: 1.2rem; opacity: 0.8; }
-
-        /* Navigation - Hamburger for Mobile [2, 4] */
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px 5%;
-            background: var(--secondary-bg);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-       .nav-links { display: none; } /* Hidden on mobile by default */
-
-       .btn {
-            display: inline-block;
-            background: var(--accent-color);
-            color: white;
-            padding: 12px 24px;
-            border-radius: 8px;
-            text-decoration: none;
-            min-height: var(--touch-target); /* Accessible tap target [2, 3] */
-            min-width: var(--touch-target);
-            font-weight: bold;
-        }
-
-        /* Grid for Projects [7] */
-       .project-grid {
-            display: grid;
-            grid-template-columns: 1fr; /* Single column for mobile [2] */
-            gap: 24px;
-            margin-top: 40px;
-        }
-
-       .project-card {
-            background: var(--secondary-bg);
-            border-radius: 12px;
-            overflow: hidden;
-            padding: 20px;
-            box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1);
-        }
-
-        /* Responsive Breakpoints [2] */
-        @media (min-width: 768px) {
-            /* Tablet/Large Smartphone */
-           .project-grid {
-                grid-template-columns: repeat(2, 1fr); /* Two columns [2] */
-            }
-           .nav-links { display: flex; gap: 20px; }
-        }
-
-        @media (min-width: 1024px) {
-            /* Desktop */
-           .project-grid {
-                grid-template-columns: repeat(3, 1fr); /* Three columns [2] */
-            }
-            h1 { font-size: 4rem; }
-        }
-
-        /* Ensure images are responsive [5] */
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-        }
-
-        footer {
-            text-align: center;
-            padding: 60px 0;
-            border-top: 1px solid var(--secondary-bg);
-        }
+        #tsparticles { position: fixed; width: 100%; height: 100%; z-index: -1; top: 0; left: 0; background-color: #020617; }
+       .glass-panel { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(20px); border: 1px solid rgba(255, 255, 255, 0.1); }
+       .glow-button { box-shadow: 0 0 30px rgba(34, 211, 238, 0.3); }
+       .bento-item:hover { border-color: rgba(34, 211, 238, 0.4); transform: translateY(-4px); }
     </style>
 </head>
-<body>
+<body class="text-white font-sans overflow-x-hidden noise">
 
-<nav>
-    <div class="logo"><strong>Portfolio 2025</strong></div>
-    <div class="nav-links">
-        <a href="#projects" style="color: inherit; text-decoration: none;">Projects</a>
-        <a href="#about" style="color: inherit; text-decoration: none;">About</a>
-    </div>
-    <a href="mailto:contact@example.com" class="btn">Hire Me</a>
-</nav>
+    <div id="tsparticles"></div>
 
-<div class="container">
-    <header>
-        <h1>Hello, I'm a Creator.</h1>
-        <p class="subtitle">Designing and building high-performance digital experiences.</p>
-    </header>
-
-    <section id="projects">
-        <h2>Featured Projects</h2>
-        <div class="project-grid">
-            <div class="project-card">
-                <h3>Project Alpha</h3>
-                <p>A mobile-first e-commerce solution with 95+ Core Web Vitals score.</p>
+    <nav class="fixed top-8 left-1/2 -translate-x-1/2 z-50 w-[92%] max-w-4xl">
+        <div class="glass-panel rounded-full px-8 py-4 flex justify-between items-center shadow-2xl">
+            <div class="text-2xl font-black tracking-tighter text-accentNeon">DEV.MASTER</div>
+            <div class="hidden md:flex space-x-10 text-[10px] font-black uppercase tracking-[0.2em]">
+                <a href="#home" class="hover:text-accentNeon transition">Intro</a>
+                <a href="#projects" class="hover:text-accentNeon transition">Work</a>
+                <a href="#stack" class="hover:text-accentNeon transition">Stack</a>
+                <a href="#contact" class="text-accentNeon border-b border-accentNeon/50 pb-1">Hire</a>
             </div>
-            <div class="project-card">
-                <h3>Project Beta</h3>
-                <p>Interactive dashboard using real-time data visualization.</p>
+            <button id="menu-trigger" class="md:hidden text-accentNeon text-xl"><i class="fa-solid fa-bars-staggered"></i></button>
+        </div>
+        <div id="mobile-nav" class="hidden glass-panel mt-4 rounded-[2rem] p-8 flex flex-col space-y-6 text-center font-bold">
+            <a href="#home">INTRO</a><a href="#projects">WORK</a><a href="#stack">STACK</a><a href="#contact">HIRE ME</a>
+        </div>
+    </nav>
+
+    <section id="home" class="min-h-screen flex items-center justify-center pt-24 px-6 text-center">
+        <div class="max-w-4xl z-10">
+            <div class="flex justify-center mb-6">
+                <span class="px-4 py-1 glass-panel rounded-full text-[10px] font-bold text-accentNeon uppercase tracking-[0.4em]">Full-Stack Architect</span>
             </div>
-            <div class="project-card">
-                <h3>Project Gamma</h3>
-                <p>Sustainable web design focused on energy-efficient rendering.</p>
+            <h1 class="text-6xl md:text-[10rem] font-black mb-10 leading-[0.8] tracking-tighter">
+                PURE <br><span class="text-transparent bg-clip-text bg-gradient-to-r from-accentNeon to-blue-500 italic">CREATION.</span>
+            </h1>
+            <p class="text-slate-400 text-lg md:text-xl max-w-2xl mx-auto mb-12 font-medium">আমি কোডকে শিল্পে রূপান্তর করি। ২০২৫ সালের আধুনিক প্রযুক্তির মাধ্যমে আপনার ব্যবসার ডিজিটাল ফিউচার তৈরি করছি।</p>
+            <div class="flex flex-col sm:flex-row gap-6 justify-center">
+                <a href="#projects" class="bg-accentNeon text-darkBg px-12 py-5 rounded-full font-black uppercase tracking-widest hover:scale-105 transition glow-button">Explore Projects</a>
+                <a href="#contact" class="glass-panel px-12 py-5 rounded-full font-black uppercase tracking-widest">Get Started</a>
             </div>
         </div>
     </section>
 
-    <section id="about" style="margin-top: 80px;">
-        <h2>About Me</h2>
-        <p>I specialize in building accessible, performant, and beautiful websites. My work follows the latest WCAG 2.2 guidelines to ensure everyone can experience the web equally.</p>
+    <section id="projects" class="py-40 px-6 max-w-7xl mx-auto">
+        <h2 class="text-4xl font-black mb-20 flex items-center gap-6 uppercase tracking-tighter">
+            <span class="h-1 w-16 bg-accentNeon"></span> Selected Portfolio
+        </h2>
+        <div class="grid grid-cols-1 md:grid-cols-4 md:grid-rows-2 gap-6 h-auto md:h-[800px]">
+            <div class="md:col-span-2 md:row-span-2 glass-panel bento-item rounded-[3rem] p-12 flex flex-col justify-between group overflow-hidden relative">
+                <div class="z-10">
+                    <h3 class="text-5xl font-black mb-4">Elite AI <br>Platform</h3>
+                    <p class="text-slate-400 max-w-xs">একটি ডাইনামিক ড্যাশবোর্ড যা ডেটা ভিজ্যুয়ালাইজেশনকে করেছে সহজ। [3]</p>
+                </div>
+                <div class="z-10 flex gap-4 mt-10">
+                    <span class="px-4 py-1 border border-white/10 rounded-full text-[10px] font-bold">REACT</span>
+                    <span class="px-4 py-1 border border-white/10 rounded-full text-[10px] font-bold">NEXT.JS</span>
+                </div>
+                <div class="absolute -bottom-20 -right-20 w-80 h-80 bg-accentNeon/5 rounded-full blur-[100px] group-hover:bg-accentNeon/10 transition"></div>
+            </div>
+
+            <div class="md:col-span-2 glass-panel bento-item rounded-[3rem] p-10 flex items-center justify-between">
+                <div>
+                    <h3 class="text-2xl font-bold">Mobile UI Kit</h3>
+                    <p class="text-slate-400 text-sm mt-2">সব ডিভাইসে প্রিমিয়াম অভিজ্ঞতা।</p>
+                </div>
+                <i class="fa-solid fa-mobile-screen-button text-5xl text-accentNeon opacity-30"></i>
+            </div>
+
+            <div class="glass-panel bento-item rounded-[3rem] p-10 flex flex-col justify-center items-center text-center">
+                <i class="fa-solid fa-cloud-arrow-up text-4xl text-accentNeon mb-6"></i>
+                <h3 class="font-bold">Scalable APIs</h3>
+            </div>
+
+            <div class="glass-panel bento-item rounded-[3rem] p-10 flex flex-col justify-center items-center text-center">
+                <i class="fa-brands fa-github text-4xl mb-6"></i>
+                <h3 class="font-bold">Open Source</h3>
+            </div>
+        </div>
     </section>
-</div>
 
-<footer>
-    <p>&copy; 2025 Personal Brand. Built with Performance in Mind.</p>
-</footer>
+    <section id="stack" class="py-40 bg-white/5 px-6">
+        <div class="max-w-4xl mx-auto text-center">
+            <h2 class="text-5xl font-black mb-20 uppercase tracking-tighter">My Tech Stack</h2>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
+                <div class="p-8 glass-panel rounded-3xl hover:bg-white/10 transition">
+                    <i class="fa-brands fa-react text-5xl text- mb-4"></i>
+                    <p class="text-[10px] font-black tracking-widest uppercase">React.js</p>
+                </div>
+                <div class="p-8 glass-panel rounded-3xl hover:bg-white/10 transition">
+                    <i class="fa-solid fa-wind text-5xl text-accentNeon mb-4"></i>
+                    <p class="text-[10px] font-black tracking-widest uppercase">Tailwind</p>
+                </div>
+                <div class="p-8 glass-panel rounded-3xl hover:bg-white/10 transition">
+                    <i class="fa-brands fa-node-js text-5xl text-[#339933] mb-4"></i>
+                    <p class="text-[10px] font-black tracking-widest uppercase">Node.js</p>
+                </div>
+                <div class="p-8 glass-panel rounded-3xl hover:bg-white/10 transition">
+                    <i class="fa-solid fa-database text-5xl text-yellow-500 mb-4"></i>
+                    <p class="text-[10px] font-black tracking-widest uppercase">Firebase</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section id="contact" class="py-40 px-6">
+        <div class="max-w-2xl mx-auto glass-panel p-12 sm:p-20 rounded-[4rem] shadow-2xl relative overflow-hidden">
+            <div class="absolute -top-40 -right-40 w-96 h-96 bg-accentNeon/10 rounded-full blur-[120px]"></div>
+            <h2 class="text-5xl font-black mb-12 text-center uppercase tracking-tighter">Let's Talk</h2>
+            <form class="space-y-8">
+                <input type="text" placeholder="Name" class="w-full p-6 rounded-3xl bg-white/5 border border-white/10 outline-none focus:border-accentNeon transition text-lg">
+                <input type="email" placeholder="Email" class="w-full p-6 rounded-3xl bg-white/5 border border-white/10 outline-none focus:border-accentNeon transition text-lg">
+                <textarea placeholder="Your Message" class="w-full p-6 rounded-3xl bg-white/5 border border-white/10 outline-none focus:border-accentNeon h-48 transition text-lg"></textarea>
+                <button class="w-full py-6 bg-accentNeon text-darkBg font-black rounded-3xl hover:opacity-90 transition shadow-lg shadow-accentNeon/20 uppercase tracking-[0.2em]">Launch Inquiry <i class="fa-solid fa-rocket ml-3"></i></button>
+            </form>
+        </div>
+    </section>
+
+    <footer class="py-16 text-center text-slate-500 text-[10px] tracking-[0.5em] uppercase border-t border-white/5">
+        &copy; 2025 MASTER ARCHITECT | DESIGNED WITH PRECISION
+    </footer>
+
+    <script>
+        // Particle Init with Mobile Optimization
+        tsParticles.load("tsparticles", {
+            fpsLimit: 60,
+            particles: {
+                number: { value: 60, density: { enable: true, area: 800 } },
+                color: { value: "#22D3EE" },
+                links: { enable: true, distance: 150, color: "#22D3EE", opacity: 0.15, width: 1 },
+                move: { enable: true, speed: 1.2, outModes: { default: "bounce" } },
+                size: { value: { min: 1, max: 2 } },
+                opacity: { value: 0.2 }
+            },
+            interactivity: {
+                events: { onHover: { enable: true, mode: "grab" }, resize: true },
+                modes: { grab: { distance: 200, links: { opacity: 0.5 } } }
+            },
+            retina_detect: false,
+            responsive:
+        });
+
+        // Mobile Menu Logic
+        const trigger = document.getElementById('menu-trigger');
+        const menu = document.getElementById('mobile-nav');
+        trigger.onclick = () => menu.classList.toggle('hidden');
+    </script>
 </body>
 </html>
