--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <nav class="fixed w-full z-50 glass-effect">
         <div class="max-w-6xl mx-auto px-4">
             <div class="flex justify-between items-center h-16">
-                <div class="text-2xl font-bold gradient-text">আমার নাম</div>
+                <div class="text-2xl font-bold gradient-text">নুর আলম</div>
                 
                 <div class="hidden md:flex space-x-8 font-medium">
                     <a href="#home" class="hover:text-indigo-600 transition">হোম</a>
