--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <section id="home" class="pt-32 pb-20 px-4 hero-bg">
         <div class="max-w-6xl mx-auto text-center">
             <div class="mb-6 inline-block p-2 bg-indigo-50 rounded-full">
-                <img src="https://ui-avatars.com/api/?name=User&background=4f46e5&color=fff&size=128" alt="Profile" class="w-32 h-32 rounded-full border-4 border-white shadow-lg mx-auto">
+                <img src="https://raw.githubusercontent.com/mnalambd09/Md-nooralam/blob/main/images/your-photo.png" alt="Profile" class="w-32 h-32 rounded-full border-4 border-white shadow-lg mx-auto">
             </div>
             <h1 class="text-4xl md:text-6xl font-bold mb-4 leading-tight">নতুন উদ্ভাবনের সাথে <br><span class="gradient-text">ওয়েব ভবিষ্যৎ গড়ি</span></h1>
             <p class="text-slate-600 text-lg md:text-xl max-w-2xl mx-auto mb-8">আমি একজন ফুল-স্ট্যাক ডেভেলপার। আধুনিক টেকনোলজি ব্যবহার করে আপনার ব্যবসার ডিজিটাল উপস্থিতি নিশ্চিত করাই আমার লক্ষ্য।</p>
