--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
                 id: 8, 
                 title: "রিয়েল-টাইম চ্যাট অ্যাপ", 
                 category: "Communication", 
-                image: "https://images.unsplash.com/photo-1512428559087-560ad5ceab42?q=80&w=800",
-                link: "https://chat-app-v2.netlify.app",
+                image: "https://realestate-demo-web.netlify.app/photo-1512428559087-560ad5ceab42?q=80&w=800",
+                link: "https://realestate-demo-web.netlify.app",
                 desc: "এটি একটি সুপার-ফাস্ট মেসেজিং অ্যাপ। এতে ইউজাররা ইনস্ট্যান্ট মেসেজ পাঠাতে পারে এবং ফাইল শেয়ার করতে পারে। এন্ড-টু-এন্ড এনক্রিপশন ব্যবহারের ফলে মেসেজগুলো সম্পূর্ণ নিরাপদ। গ্রুপ চ্যাট এবং ডার্ক মোড সাপোর্ট এই অ্যাপের প্রধান বৈশিষ্ট্য। এতে ইউজার যখন টাইপ করে, তখন অপর পক্ষকে 'typing...' নোটিফিকেশন দেখায়। এটি পুশ নোটিফিকেশন সাপোর্ট করে যাতে অ্যাপ বন্ধ থাকলেও মেসেজ অ্যালার্ট পাওয়া যায়।",
                 tech: ["React", "Socket.io", "Express", "Node.js"]
             },
